# gridworks-backoffice

./: .gitignore  add_energy.py  add_house.py  add_user.py  approximations.ipynb  approximations.py  approximations_interactive.html  average_storage_temperature.py  edit_house.py  index.html  login.html  models.py  pico_reliability.ipynb  pyproject.toml  requirements.txt  ticklist_visualizer.py  ticklists_data.json  update_house.py  visualizer-plots.js
house_parameters/: beech_electricity_use.csv  elm_electricity_use.csv  fir_electricity_use.csv  house_parameters.py  house_parameters_by_month.csv  maple_electricity_use.csv  oak_electricity_use.csv
populate_database/: add_bid_column.py  add_hourly_data.py  add_house_params.py  add_oat_f_column.py  add_total_usd_per_mwh_column.py  add_user.py  add_zone_at_setpoint_columns.py  fill_hourly_data.sh  update_house.py
side_quests/house_parameters/: house_energy_from_hp.py  house_parameters.py  house_parameters_by_month.csv
side_quests/pico_reliability/: pico_reliability.py
side_quests/ticklist_debugging/: ticklist_visualizer.py
snippets/: add_energy.py
src/gbo/: README.md  README_DATABASE.md  __init__.py  alembic.ini  database.py  models.py  setup_database.py
src/gbo/alembic/: env.py
src/gbo/asl/: README.md  __init__.py  codec.py
src/gbo/asl/enums/: __init__.py  (+1 more)
src/gbo/enums/: representation_status.py
src/gbo/named_types/: __init__.py  home_address.py  home_contact.py  house_address.py  house_contact.py  house_parameters.py  house_status.py
ticklist_debugging/: ticklist_visualizer.py
(+10 files in other folders)
