[project]
name = "gridworks-backoffice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.2.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "gridworks-base>=0.3.5",
    "gridworks-journalkeeper @ git+https://github.com/thegridelectric/gridworks-journalkeeper.git",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "pandas>=2.2.3",
    "pendulum>=3.0.0",
    "matplotlib>=3.10.1",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gbo*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
